--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
 <h2>連絡先</h2>
 
 <p class="c">お問い合わせは以下までお願い致します。</p>
-<p class="c"><span class="big1">TEL:03-0000-0000</span>
-<br>住所：〒903-2304 沖縄県うるま市与那城屋慶名<br>
-<br>mail:hello@subarashiisaito.co.jp<br>
+<p class="c"><span class="underline" >TEL:090-9078-4416</span>
+<br><span class="underline" >住所：〒903-2304 沖縄県うるま市与那城屋慶名</span><br>
+<br><span class="underline" >mail:hello@subarashiisaito.co.jp</span><br>
 </p>
 <p class="c"><img src="images/address2.png" alt="" width="auto"></p>
 
