--- a/index.html
+++ b/index.html
@@ -1,99 +1,245 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<title>沖縄宿泊UY</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>沖縄宿泊 UY</title>
+  <!-- レスポンシブ用のViewport指定 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- サイト説明（SEO向け） -->
+  <meta name="description" content="ここにサイト説明を入れます">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- Bootstrap CSS -->
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+    rel="stylesheet"
+  >
+
+  <!-- Google Fonts (Lobsterなど必要フォントを追加) -->
+  <link 
+    href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" 
+    rel="stylesheet"
+  >
+
+  <!-- Animate.css -->
+  <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
+  <!-- 既存の外部CSS -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- ここに追加のスタイルを記述（タイトルデザインなど） -->
+  <style>
+    /* タイトル部分をオシャレに */
+    #logo {
+      background-color: #F5DEB3; /* 薄い茶色 (Wheat) */
+      padding: 15px 30px;
+      border-radius: 12px;
+      display: inline-block;
+      font-family: 'Lobster', cursive; /* Google Fonts: Lobster を使用 */
+      font-size: 2.5rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+    /* タイトルホバー時の拡大 */
+    #logo:hover {
+      transform: scale(1.05);
+    }
+    /* タイトルのリンク色・装飾 */
+    #logo a {
+      color: #333;
+      text-decoration: none;
+    }
+
+    /* 予約ボタンのカスタムスタイル（Bootstrapの.btnクラスを併用） */
+    .reserve-link {
+      margin: 0 5px;
+      transition: transform 0.3s ease;
+    }
+    .reserve-link:hover {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
+<body class="bg-light">
 
-<body>
+<div id="container"><!-- 全体をラップするコンテナ -->
 
-<div id="container">
+  <!-- ==============================
+       ヘッダー部分
+     ============================== -->
+  <header class="py-4">
+    <div class="container text-center">
+      <!-- オシャレなタイトル（アニメーション付き） -->
+      <h1 id="logo" class="animate__animated animate__fadeInDown">
+        <a href="index.html">沖縄宿泊UY</a>
+      </h1>
 
-<header>
-<h1 id="logo"><a href="index.html">沖縄宿泊UY</a></h1>
-</header>
+      <!-- Booking.com と Airbnb の予約ボタン -->
+      <div class="mt-3">
+        <a 
+          href="https://www.booking.com/hotel/jp/gesutohausuuyokinawa.ja.html?aid=356980&label=gog235jc-1FCAsodUIUZ2VzdXRvaGF1c3V1eW9raW5hd2FIFVgDaHWIAQGYARW4AQfIAQzYAQHoAQH4AQKIAgGoAgO4Aq2-_LwGwAIB0gIkOWU0ZWE1NjUtZjA2NS00MzY2LWE1MzItYTllNDE5YTZkNzY12AIF4AIB&sid=2df4cb54b7178b4920d53f701291ca20&dest_id=900049779&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=1&hpos=1&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=popularity&srepoch=1738481459&srpvid=26dd34d7ecad0134&type=total&ucfs=1&" 
+          target="_blank" 
+          class="btn btn-primary reserve-link animate__animated animate__fadeInUp"
+        >
+          Booking.com で予約
+        </a>
+        <a 
+          href="https://www.airbnb.jp/rooms/1197562650353137656?guests=1&adults=1&s=67&unique_share_id=084ea476-4a34-4d66-8893-b5b2b2c21853" 
+          target="_blank" 
+          class="btn btn-danger reserve-link animate__animated animate__fadeInUp"
+        >
+          Airbnb で予約
+        </a>
+      </div>
+    </div>
+  </header>
 
-<!--メインメニュー-->
-<nav id="menubar">
-<ul>
-<li><a href="index.html">HOME</a></li>
-<li><a href="information.html">INFORMATION</a></li>
-<li><a href="service.html">ROOMS</a></li>
-<li><a href="contact.html">INQUIRY</a></li>
-</ul>
-</nav>
+  <!-- ==============================
+       メインメニュー
+     ============================== -->
+  <nav id="menubar">
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="information.html">INFORMATION</a></li>
+      <li><a href="service.html">ROOMS</a></li>
+      <li><a href="contact.html">INQUIRY</a></li>
+    </ul>
+  </nav>
 
-<!--スライドショー（slick）-->
-<div class="mainimg">
-<div><img src="images/home.JPEG" alt=""></div>
-<div><img src="images/home2.JPEG" alt=""></div>
-<div><img src="images/home3.JPEG" alt=""></div>
-</div>
+  <!-- ==============================
+       スライドショー（slick）
+     ============================== -->
+  <div class="mainimg">
+    <div><img src="images/home.JPEG" alt=""></div>
+    <div><img src="images/room.jpg" alt=""></div>
+    <div><img src="images/cottage.jpg" alt=""></div>
+    <div><img src="images/kittin.jpg" alt=""></div>
+    <div><img src="images/home2.JPEG" alt=""></div>
+    <div><img src="images/home3.JPEG" alt=""></div>
+  </div>
 
-<main>
+  <!-- ==============================
+       メインコンテンツ
+     ============================== -->
+  <main>
+    <section>
+      <h2>UY</h2>
+      <p>
+        ・ゲストハウスUYでは、宿泊が初めての方にも安心してもらいやすいように、
+        お客様の声に対して、いつでも対応してくれるフロントスタッフが柔軟に対応してくれます。
+      </p>
+      <div class="underline">
+      <p>
+        <span class="bold">・日本に馴染みのない海外からのお客様</span>にも高い評価をいただいています
+      </p>
+    </div>
+    </section>
 
-<section>
+    <section>
+      <h2>メニュー</h2>
+      <table class="menu-table">
+        <tr>
+          <td colspan="2" class="title"><strong>■メニュー・料金等</strong></td>
+        </tr>
+        <tr>
+          <th>宿泊プラン</th>
+          <td>
+            素泊まり１泊　5,000円（税込）／２人部屋<br>
+            ※部屋数　７部屋
+          </td>
+        </tr>
+        <tr>
+          <th>設備</th>
+          <td>
+            各部屋は鍵付き個室でデスク完備。共用バスルームには無料アメニティとベッドリネンをご用意。<br>
+            庭、ラウンジ、テラス、屋上テラスで星空観察もお楽しみいただけます。
+          </td>
+        </tr>
+        <tr>
+          <th>サービス</th>
+          <td>
+            24時間対応フロント、館内無料Wi-Fi、無料レンタル自転車と専用駐車場、
+            共用キッチン（冷蔵庫・洗濯機完備）など、快適な滞在をサポート。<br>
+            プロジェクターも利用可能です。
+          </td>
+        </tr>
+        <tr>
+          <th>支払い</th>
+          <td>現金のみ</td>
+        </tr>
+      </table>
+    </section>
 
-<h2>UY</h2>
+    <section>
+      <h2>お知らせ</h2>
+      <!-- 下記はテキストとして残していますが、ボタンにしてもOKです -->
+      <p>booking.com : <a href="https://www.booking.com/hotel/jp/gesutohausuuyokinawa.ja.html" target="_blank">リンクはこちら</a></p>
+      <p>airbnb : <a href="https://www.airbnb.jp/rooms/1197562650353137656" target="_blank">リンクはこちら</a></p>
 
-<h3>最新情報</h3>
-<p>ここにゲストハウスの最新情報</p>
+      <h2>最新情報</h2>
+      <dl id="new">
+        <dt>2024/12/11</dt>
+        <dd>屋上テラスができました！</dd>
+        <dt>2024/09/10</dt>
+        <dd>ホームページスタート</dd>
+      </dl>
+    </section>
+  </main>
 
+  <!-- ==============================
+       フッター
+     ============================== -->
+  <footer>
+    <ul class="icon">
+      <li><a href="#"><img src="images/icon_facebook.png" alt="Facebook"></a></li>
+      <li><a href="#"><img src="images/icon_twitter.png" alt="Twitter"></a></li>
+      <li><a href="#"><img src="images/icon_instagram.png" alt="Instagram"></a></li>
+      <li><a href="#"><img src="images/icon_youtube.png" alt="YouTube"></a></li>
+      <li><a href="#"><img src="images/icon_line.png" alt="LINE"></a></li>
+    </ul>
+    <small>
+      Copyright &copy;
+      <a href="index.html">Sample Company</a>
+      All Rights Reserved.
+    </small>
+    <span class="pr">
+      <a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a>
+    </span>
+  </footer>
 
+</div><!-- /#container -->
 
-<h3>サンプル</h3>
+<!-- ==============================
+     JS 読み込み
+   ============================== -->
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-</section>
-
-<section>
-
-<h2>お知らせ</h2>
-
-<dl id="new">
-<dt>2021/12/11</dt>
-<dd>tp_beginner7配布開始。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-</dl>
-
-</section>
-
-</main>
-
-<footer>
-<ul class="icon">
-<li><a href="#"><img src="images/icon_facebook.png" alt="Facebook"></a></li>
-<li><a href="#"><img src="images/icon_twitter.png" alt="Twitter"></a></li>
-<li><a href="#"><img src="images/icon_instagram.png" alt="Instagram"></a></li>
-<li><a href="#"><img src="images/icon_youtube.png" alt="YouTube"></a></li>
-<li><a href="#"><img src="images/icon_line.png" alt="LINE"></a></li>
-</ul>
-<small>Copyright&copy; <a href="index.html">Sample Company</a> All Rights Reserved.</small>
-<span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
-</footer>
-
-</div>
-<!--/#container-->
-
-<!--jQueryファイルの読み込み-->
+<!-- jQuery（slick用） -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-<!--スライドショー（slick）-->
+<!-- slickスライダー本体 -->
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/slick.js"></script>
 
-<!--ページの上部へ戻るボタンとスクリプト-->
+<!-- 上部へ戻るボタン用スクリプト -->
 <p class="pagetop"><a href="#">↑</a></p>
 <script src="js/openclose_tp.js"></script>
+
+<!-- タイトルへのマウスオーバーアニメーション (Animate.css) -->
+<script>
+  document.addEventListener('DOMContentLoaded', function(){
+    const logo = document.getElementById('logo');
+    logo.addEventListener('mouseover', function(){
+      logo.classList.add('animate__pulse');
+    });
+    logo.addEventListener('mouseout', function(){
+      logo.classList.remove('animate__pulse');
+    });
+  });
+</script>
 
 </body>
 </html>
